@@ -8,11 +8,11 @@ import com.soft.sys.constants.RedisConstant;
 import com.soft.sys.constants.WebSocketConstant;
 import com.soft.sys.entity.SysFile;
 import com.soft.sys.enums.WebSocketOrderEnum;
-import com.soft.sys.model.dto.UserDto;
+import com.soft.sys.model.dto.UserDTO;
 import com.soft.sys.service.SysFileService;
 import com.soft.sys.websocket.api.WebSocketConcreteHandler;
-import com.soft.sys.websocket.receive.FileTransferOverRecParam;
-import com.soft.sys.websocket.send.SendParams;
+import com.soft.sys.websocket.receive.FileTransferOverRequest;
+import com.soft.sys.websocket.send.WebSocketResponse;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.beans.factory.annotation.Value;
@@ -25,7 +25,6 @@ import org.springframework.web.socket.WebSocketSession;
 import java.io.*;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.time.LocalDateTime;
 
 /**
@@ -50,8 +49,8 @@ public class FileTransferOverHandler implements WebSocketConcreteHandler<String>
 
     @Override
     public void handle(WebSocketSession session, AbstractWebSocketMessage<String> message) throws IOException {
-        FileTransferOverRecParam fileTransferOverRecParam = JSON.parseObject(message.getPayload(), FileTransferOverRecParam.class);
-        UserDto userDto = (UserDto) session.getAttributes().get(WebSocketConstant.WEBSOCKET_USER);
+        FileTransferOverRequest fileTransferOverRecParam = JSON.parseObject(message.getPayload(), FileTransferOverRequest.class);
+        UserDTO userDto = (UserDTO) session.getAttributes().get(WebSocketConstant.WEBSOCKET_USER);
         Long userId = userDto.getId();
         String username = userDto.getUsername();
         String fileKey = (String) redisTemplate.opsForValue().get(RedisConstant.SLICE_FILE_KEY + username);
@@ -66,7 +65,7 @@ public class FileTransferOverHandler implements WebSocketConcreteHandler<String>
         long size = BaseConstant.LONG_INIT_VAL;
         int index = BaseConstant.INTEGER_INIT_VAL;
 
-        SendParams sendParams = new SendParams();
+        WebSocketResponse sendParams = new WebSocketResponse();
         sendParams.setStatus(false);
         sendParams.setOrder(fileTransferOverRecParam.getOrder());
         Integer maxIndex = (Integer) redisTemplate.opsForValue().get(RedisConstant.SLICE_FILE_INDEX_KEY + username);
@@ -94,7 +93,7 @@ public class FileTransferOverHandler implements WebSocketConcreteHandler<String>
         try (OutputStream os = new BufferedOutputStream(new FileOutputStream(file))) {
             while (index < maxIndex) {
                 String filePath = tmpPath + BaseConstant.LEFT_SLASH + username + BaseConstant.LEFT_SLASH + fileKey + BaseConstant.LEFT_SLASH + index + BaseConstant.TMP_SUFFIX;
-                Path path = Paths.get(filePath);
+                Path path = Path.of(filePath);
                 InputStream stream = Files.newInputStream(path);
                 length = stream.read(buffer, BaseConstant.INTEGER_INIT_VAL, length);
                 stream.close();
